--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io(5)/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io(5)/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io(5)/favicon-16x16.png" />
+    <link rel="manifest" href="/favicon_io(5)/site.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
 
   <body>
